# PostureMonitor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  data.csv  vcpkg-configuration.json  vcpkg.json
include/common/: sudo_gdb_script.sh
include/cv/: CardOCR.hpp  cardOCR.hpp
include/database/: DatabaseManager.hpp
include/feeder/: Feeder.hpp  feeder.hpp
src/: main.cpp
src/cv/: CardCondition.cpp  CardOCR.cpp  cardCondition.cpp  cardOCR.cpp
src/database/: DatabaseManager.cpp  db_manager.py
src/database/cpp/: CRUD.cpp
src/feeder/: Feeder.cpp  feeder.cpp
src/interface/: MainMenu.cpp  MainMenu.h  MainMenu.hpp  MainMenu.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  collection.cpp  collection.h  collection.ui  filter.cpp  filter.h  filter.ui  main.cpp  rarity.cpp  rarity.h  rarity.ui  scan.cpp  scan.h  scan.ui  search.cpp  search.h  search.ui  type.cpp  type.h  type.ui  zoom.cpp  zoom.h  zoom.ui
src/interface/ui/: MainMenu.ui  scan.ui  search.ui  search.ui.autosave
src/ui/: Filter.ui  Rarity.ui  Type.ui  search.ui
